--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     implementation "androidx.datastore:datastore:1.0.0"
     implementation  "com.google.protobuf:protobuf-javalite:3.19.4"
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 
 protobuf {
